2001-10-11  Taiki SUGAWARA  <taiki.s@cityfujisawa.ne.jp>

	* shimbun/sb-tcup.el (shimbun-tcup-make-time): Fix time regexp.
	(shimbun-headers): Ditto.

2001-10-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-f1express.el, shimbun/sb-fml.el, shimbun/sb-h14m.el,
	shimbun/sb-hns.el, shimbun/sb-impress.el, shimbun/sb-kantei.el,
	shimbun/sb-mainichi.el, shimbun/sb-makanai.el,
	shimbun/sb-mhonarc.el, shimbun/sb-nikkansports.el,
	shimbun/sb-nikkei.el, shimbun/sb-ruby.el,
	shimbun/sb-slashdot-jp.el, shimbun/sb-tcup.el,
	shimbun/sb-vinelinux.el, shimbun/sb-yahoo.el, shimbun/sb-zdnet.el,
	shimbun/shimbun.el, mew-w3m.el, w3m-form.el w3m.el: Remove useless
	whitespaces.

	* w3m.el (w3m-local-dirlist-cgi): Replace `re-search-forward' to
	`search-forward'; bind `beg' as a non-global variable.

2001-10-11  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>

	* shimbun/sb-f1express.el (shimbun-f1express-coding-system):
	Abolished.

	* shimbun/sb-isize-sports.el (shimbun-isize-sports-coding-system):
	Ditto.

2001-10-11  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-local-dirlist-cgi): Remove <from>...</form>.

2001-10-11  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>

	* shimbun/sb-tcup.el (shimbun-headers): Reset locale to avoid
	incompatibility of `format-time-string'.

2001-10-11  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-namazu.el (shimbun-namazu-url,
	shimbun-namazu-group-url-alist, shimbun-index-url): Changed URL of
	emacs-w3m mailing list archive.

	* w3m.el (w3m-expand-path-name): Fix incompatibility of drive
	letter.

2001-10-11  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-e21.el (toplevel): Require 'wid-edit.
	(w3m-form-button-face): Set background and foreground color;
	Set box line-width as 2.
	(w3m-form-button-pressed-face): Ditto.
	(w3m-form-button-mouse-face): New face.
	(w3m-form-button): New widget button.
	(w3m-form-make-button): Use `widget-convert-button' to put
	w3m-form-button.
	(w3m-setup-widget-faces): New function.