@@ -146,29 +146,44 @@ Buffer string between BEG and END are replaced with IMAGE."
   "*Face to fontify pressed buttons in forms."
   :group 'w3m-face)
 
+(defvar w3m-widget-keymap nil)
+
 (define-widget 'w3m-form-button 'push-button
   "Widget for w3m form button."
-  :keymap widget-keymap
+  :keymap w3m-widget-keymap
   :action (function (lambda (widget &optional e)
 		      (eval (widget-get widget :w3m-form-action)))))
 
 (defun w3m-form-make-button (start end properties)
   "Make button on the region from START to END."
+  (unless w3m-widget-keymap
+    (let ((map (copy-keymap w3m-mode-map)))
+      (substitute-key-definition 'w3m-view-this-url
+				 'widget-button-press map)
+      (substitute-key-definition 'w3m-mouse-view-this-url
+				 'widget-button-click map)
+      (setq w3m-widget-keymap map)))
   (if w3m-form-use-fancy-faces
-      (progn
-	(eq ?\[ (char-after start))
-	(eq ?\] (char-before end))
-	(save-excursion
-	  (goto-char start)
-	  (delete-char 1)
-	  (insert " ")
-	  (goto-char end)
-	  (delete-char -1)
-	  (insert " ")
+      (let ((widget-button-face 'w3m-form-button-face)
+	    (widget-mouse-face 'w3m-form-button-mouse-face)
+	    (widget-button-pressed-face 'w3m-form-button-pressed-face))
+	(unless (memq (face-attribute 'w3m-form-button-face :box)
+		      '(nil unspecified))
+	  (and (eq ?\[ (char-after start))
+	       (eq ?\] (char-before end))
+	       (save-excursion
+		 (goto-char start)
+		 (delete-char 1)
+		 (insert " ")
+		 (goto-char end)
+		 (delete-char -1)
+		 (insert " ")
+		 (setq start (1+ start)
+		       end (1- end)))))
 	  (widget-convert-button
-	   'w3m-form-button (1+ start) (1- end)
-	   :w3m-form-action (plist-get properties 'w3m-action)))
-	(add-text-properties start end properties))
+	   'w3m-form-button start end
+	   :w3m-form-action (plist-get properties 'w3m-action))
+	  (add-text-properties start end properties))
     (add-text-properties start end (append '(face w3m-form-face)
 					   properties))))
 
@@ -272,16 +287,7 @@ Buffer string between BEG and END are replaced with IMAGE."
 				   'help-echo
 				   "mouse-2 prompts to input URL"))))))
 
-(defun w3m-setup-widget-faces ()
-  (make-local-variable 'widget-button-face)
-  (make-local-variable 'widget-mouse-face)
-  (make-local-variable 'widget-button-pressed-face)
-  (setq widget-button-face 'w3m-form-button-face)
-  (setq widget-mouse-face 'w3m-form-button-mouse-face)
-  (setq widget-button-pressed-face 'w3m-form-button-pressed-face))
-
 (add-hook 'w3m-mode-hook 'w3m-setup-header-line)
-(add-hook 'w3m-mode-hook 'w3m-setup-widget-faces)
 
 (provide 'w3m-e21)
 ;;; w3m-e21.el ends here.
